# ai-meeting-notes

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SETUP.md  init_db.py  pyproject.toml  run_backend.py  test_coverage_branch_report.md
.claude/sessions/oss_263/: architecture.md  context.md  plan.md
backend/app/: __init__.py  database.py  main.py  models.py
backend/app/api/: routes.py
backend/app/services/: entity_manager.py  meeting_processor.py
backend/scripts/: init_db.py
backend/tests/: __init__.py  conftest.py  run_tests.py  test_checkup_endpoints.py
docs/features/: entity-system.md  file-upload.md  meeting-processing.md  meeting-types.md
docs/implementation/: database-schema.md  openai-integration.md  state-management.md  type-safety.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: checkbox.tsx
frontend/src/pages/: AdminPage.tsx  CheckupPage.tsx  EntitiesPage.tsx  EntityDetailPage.tsx  HomePage.tsx  MeetingDetailPage.tsx  MeetingsPage.tsx  NewMeetingPage.tsx
frontend/src/types/: index.ts
